Fixed flickering issue
The old script can successfully set tags' position to `relative' when
they are overlapping. However, in certain window width, the tag position
will switch back and forth between `absolute' and `relative'.

--- a/assets/css/equations.css
+++ b/assets/css/equations.css
@@ -7,12 +7,12 @@
 }
 
 .katex-display > .katex > .katex-html > .tag {
+    display: inline-block;
     position: absolute;
-    right: 1rem;
+    padding-left: 0.5rem;
 }
  
 /* Only use this when the equations are overflowed */
 .tag-overflowed {
     position: relative !important;
-    right: -5rem !important;
 }
